Array MOD First Last option does nothing #33264

Closed
opened 2012-11-22 11:38:56 +01:00 by Mikhail Rachinskiy · 4 comments

%%%Array MOD First Last option does nothing

Open attached blend file to see that first and last pieces of an object are not merging no matter which option I set.

Platform:


Windows 7 x32

OpenGL:


  • Renderer: ATI Radeon HD 4770
  • Vendor: ATI Technologies Inc.
  • Version: 3.3.11653 Compatibility Profile Context

Blender:


Version: 2.64 (sub 9)
Revision: 52455%%%

%%%Array MOD First Last option does nothing Open attached blend file to see that first and last pieces of an object are not merging no matter which option I set. Platform: **** Windows 7 x32 OpenGL: **** - Renderer: ATI Radeon HD 4770 - Vendor: ATI Technologies Inc. - Version: 3.3.11653 Compatibility Profile Context Blender: **** Version: 2.64 (sub 9) Revision: 52455%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

%%%I just thought that maybe develop a "Vertex Merge" modifier (and deletion of merge options from array mod of course) would be a better solution?%%%

%%%I just thought that maybe develop a "Vertex Merge" modifier (and deletion of merge options from array mod of course) would be a better solution?%%%

%%%Fixed in svn rev52484. Thanks for the report, closing.%%%

%%%Fixed in svn rev52484. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#33264
No description provided.