Fix #33264: Array MOD First Last option does nothing